# agent-interaction-evaluator

./: .gitignore  README.md  REQUIREMENTS.md  SPEC.md  pyproject.toml
deploy/: ailogger-wrapper  ailogger.service
docs/: AUTONOMOUS_OPERATION.md  DATA-TRACKING.md
evaluator/flows/: aie_heartbeat.lobster  check_drift.py  check_health.py  check_oracle.py
evaluator/scripts/: cron_setup.sh
evaluator/tests/: test_audit.py  test_db.py  test_logger.py  test_oracle_engine.py  test_sanitiser.py  test_schema.py  test_txtai_client.py
oracles/: _registry.yaml
oracles/assumption/: groundedness_required.yaml  no_confidence_zero.yaml
oracles/circuit_breaker/: halt_on_critical_drift.yaml
oracles/delegation/: context_fidelity_threshold.yaml  no_empty_context.yaml
oracles/tool_call/: error_recovery_rate.yaml  no_secret_exposure.yaml  schema_compliance.yaml
scripts/: alert_and_halt.py  alert_critical.py  alert_critical.sh  check_drift.sh  check_health.sh  check_oracle.sh  observability_summary.py  post_observability.sh  run_drift_and_alert.sh
src/evaluator/: __init__.py  aiaudit.py  aieval.py  alerts.py  audit.py  db.py  drift.py  logger.py  logger_client.py  observability.py  opik_client.py  oracle_engine.py  schema.py  txtai_client.py
