[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-interaction-evaluator"
version = "0.1.0"
description = "Structured observability for multi-agent ecosystems — assumption drift detection, oracle-based evaluation, and audit trails."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sean Cheong", email = "seanos1a@gmail.com" }
]
keywords = ["agents", "observability", "drift-detection", "audit-trail", "multi-agent", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "txtai>=6.0.0",
    "faiss-cpu",
    "jsonschema",
    "pyyaml",
    "aiosqlite",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
]

[project.scripts]
ailogger = "evaluator.logger:main"
aidrift = "evaluator.drift:main"
aieval = "evaluator.evaluator_cli:main"
aiaudit = "evaluator.audit_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluator"]

[tool.pytest.ini_options]
testpaths = ["evaluator/tests"]
asyncio_mode = "auto"
